RESOLVED FIXED194620
Ignore Ad Click Attribution where source and destination are same-site
https://bugs.webkit.org/show_bug.cgi?id=194620
Summary Ignore Ad Click Attribution where source and destination are same-site
John Wilander
Reported 2019-02-13 15:50:19 PST
We should not accept Ad Click Attributions where the current website and the addestination attribute are same-site. The site doesn't need attributions sent for itself.
Attachments
Patch (9.09 KB, patch)
2019-02-13 15:53 PST, John Wilander
no flags
Patch for landing (9.59 KB, patch)
2019-02-13 16:58 PST, John Wilander
no flags
John Wilander
Comment 1 2019-02-13 15:50:34 PST
John Wilander
Comment 2 2019-02-13 15:53:39 PST
Jiewen Tan
Comment 3 2019-02-13 16:09:56 PST
Comment on attachment 361950 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=361950&action=review LGTM except for the lack of the clarifications. John explained that to me personally. Please add those explanations to the change log before landing. r=me. > Source/WebCore/ChangeLog:9 > + Updated existing test. I guess some clarifications of the necessity of this patch is needed here. > Source/WebCore/html/HTMLAnchorElement.cpp:449 > + if (documentDomain == adDestinationHost) { It is a bit unfortunate that platforms that don't have PUBLIC_SUFFIX_LIST get different behaviors.
John Wilander
Comment 4 2019-02-13 16:18:56 PST
(In reply to Jiewen Tan from comment #3) > Comment on attachment 361950 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=361950&action=review > > LGTM except for the lack of the clarifications. John explained that to me > personally. Please add those explanations to the change log before landing. Good idea. Will do. > r=me. > > > Source/WebCore/ChangeLog:9 > > + Updated existing test. > > I guess some clarifications of the necessity of this patch is needed here. Yup. > > Source/WebCore/html/HTMLAnchorElement.cpp:449 > > + if (documentDomain == adDestinationHost) { > > It is a bit unfortunate that platforms that don't have PUBLIC_SUFFIX_LIST > get different behaviors. Yes. I'll make a note of that in the change log too. Thanks for the review, Jiewen!
John Wilander
Comment 5 2019-02-13 16:19:24 PST
I will wait for the bots to go green before landing.
John Wilander
Comment 6 2019-02-13 16:58:36 PST
Created attachment 361967 [details] Patch for landing
WebKit Commit Bot
Comment 7 2019-02-13 17:36:33 PST
Comment on attachment 361967 [details] Patch for landing Clearing flags on attachment: 361967 Committed r241490: <https://trac.webkit.org/changeset/241490>
WebKit Commit Bot
Comment 8 2019-02-13 17:36:35 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.